changed the path to the logic.js file in the index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div id="map"></div>
 
   <!-- JavaScript file -->
-  <script type="text/javascript" src="static/js/logic.js"></script>
+  <script type="text/javascript" src="Leaflet-Part-1/static/js/logic.js"></script>
 </body>
 
 </html>
