--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <script src="https://d3js.org/d3.v5.min.js"></script>
 
   <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="static/css/style.css">
+  <link rel="stylesheet" type="text/css" href="Leaflet-Part-1/static/css/style.css">
 </head>
 
 <body>
