--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <div id="map"></div>
 
   <!-- JavaScript file -->
+  <script type="text/javascript" src="Leaflet-Part-1/static/js/config.js"></script>
   <script type="text/javascript" src="Leaflet-Part-1/static/js/logic.js"></script>
 </body>
 
