--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
   <!-- JavaScript file -->
   <script type="text/javascript" src="Leaflet-Part-1/static/js/config.js"></script>
-  <script type="text/javascript" src="Leaflet-Part-1/static/js/logic.js"></script>
+  <!--<script type="text/javascript" src="Leaflet-Part-1/static/js/logic.js"></script>-->
+  <script type="text/javascript" src="Leaflet-Part-2/static/js/logic2.js"></script>
 </body>
 
 </html>
