--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
   <div id="map"></div>
 
   <!-- JavaScript file -->
-  <script type="text/javascript" src="Leaflet-Part-1/static/js/config.js"></script>
-  <!--<script type="text/javascript" src="Leaflet-Part-1/static/js/logic.js"></script>-->
-  <script type="text/javascript" src="Leaflet-Part-2/static/js/logic2.js"></script>
+  <script type="text/javascript" src="Leaflet-Part-1/js/config.js"></script>
+  <!--<script type="text/javascript" src="Leaflet-Part-1/js/logic.js"></script>-->
+  <script type="text/javascript" src="Leaflet-Part-2/js/logic2.js"></script>
 </body>
 
 </html>
